welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:2: error: value Blue is not a member of object java.awt.Color
  bdmotif(Color.Blue)
                ^