welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
  bdmotif(Color.Blue)
}
def bgmotif(c:Color){
  setCouleurBrosse(c)
  avance()
  baisseBrosse()
  leveBrosse()
  gauche()
  avance()
  gauche()
}
def bdmotif(c:Color){
  setCouleurBrosse(c)
  baisseBrosse()
  leveBrosse()
  avance()
  gauche()
  avance()
  gauche()
  
}